[Backend] Fix CORS configuration for cross-origin requests